<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#A4C639"
    tools:context="com.adosat.adosat.CompAndroid">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                card_view:cardCornerRadius="4dp">


            <RelativeLayout
                android:background="#E0E0E0"
                android:id="@+id/relativelayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:background="#ffffff"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:id="@+id/beginner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beginner"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:layout_margin="7dp"
                    android:id="@+id/and_beg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/beginner"
                    android:text="@string/and_beg" />

                <LinearLayout
                    android:layout_margin="7dp"
                    android:id="@+id/and_beg_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/and_beg"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:text="@string/hours" />

                    <TextView

                        android:layout_marginStart="75dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:text="@string/and_beg_hrs"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="7dp"
                    android:id="@+id/and_beg_l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/and_beg_ll"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/and_beg_pric"
                        android:textStyle="bold" />

                    <Button
                        android:text="@string/syllabus"
                        android:layout_weight="1"
                        android:onClick="bsylla"
                        android:id="@+id/bsylla"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/mybuttons"
                        />

                </LinearLayout>

            </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                card_view:cardBackgroundColor="#A4C639"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                card_view:cardCornerRadius="4dp"
                android:layout_below="@+id/card_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp">

            <RelativeLayout
                android:background="#E0E0E0"
                android:id="@+id/relativelayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view1"
                >

                <TextView
                    android:background="#ffffff"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:id="@+id/intermediate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intermediate"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:layout_margin="7dp"
                    android:id="@+id/and_int"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/intermediate"
                    android:text="@string/and_beg" />

                <LinearLayout
                    android:layout_margin="7dp"
                    android:id="@+id/and_int_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/and_int"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:text="@string/hours" />

                    <TextView
                        android:layout_marginStart="75dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:text="@string/and_inter_hrs"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="7dp"
                    android:id="@+id/and_inter_l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/and_int_ll"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/and_inter_pric"
                        android:textStyle="bold" />

                    <Button
                        android:text="@string/syllabus"
                        android:layout_weight="1"
                        android:onClick="bsylla"
                        android:id="@+id/bsyllas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mybuttons"/>

                </LinearLayout>
            </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                card_view:cardBackgroundColor="#A4C639"
                android:layout_marginTop="10dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_below="@+id/card_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="100dp">

            <RelativeLayout
                android:background="#E0E0E0"
                android:id="@+id/relativelayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view2">

                <TextView
                    android:background="#ffffff"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:id="@+id/adv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:layout_margin="7dp"
                    android:id="@+id/and_adv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/adv"
                    android:text="@string/and_beg" />

                <LinearLayout
                    android:layout_margin="7dp"
                    android:id="@+id/and_adv_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/and_adv"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:text="@string/hours" />

                    <TextView
                        android:layout_marginStart="75dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:text="@string/and_adv_hrs"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="7dp"
                    android:id="@+id/and_adv_l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/and_adv_ll"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/and_adv_pric"
                        android:textStyle="bold" />
                    <Button
                        android:text="@string/syllabus"
                        android:layout_weight="1"
                        android:onClick="bsylla"
                        android:id="@+id/bsyllase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mybuttons"/>
                </LinearLayout>

            </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                card_view:cardBackgroundColor="#A4C639"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view4"
                android:layout_below="@+id/card_view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp">

            <RelativeLayout
                android:background="#E0E0E0"
                android:id="@+id/relativelayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:background="#ffffff"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:id="@+id/exp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expert"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:layout_margin="7dp"
                    android:id="@+id/and_exp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/exp"
                    android:text="@string/and_beg" />

                <LinearLayout
                    android:layout_margin="7dp"
                    android:id="@+id/and_exp_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/and_exp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.75"
                        android:text="@string/hours" />

                    <TextView
                        android:layout_marginStart="75dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:text="@string/and_exp_hrs"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="7dp"
                    android:id="@+id/and_exp_l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/and_exp_ll"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginBottom="60dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/and_exp_pric"
                        android:textStyle="bold" />
                    <Button
                        android:text="@string/syllabus"
                        android:layout_weight="1"
                        android:onClick="bsylla"
                        android:id="@+id/bsyllast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mybuttons"/>
                </LinearLayout>

            </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
