<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/bg"
    tools:context="com.adosat.adosat.Departments">

    <ImageView
        android:id="@+id/departments_dp"
        android:src="@drawable/departments"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"/>


    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/departments_dp"
        android:id="@+id/scrollView"
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="#ea4d4d"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/departments"
        android:id="@+id/departments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        card_view:cardBackgroundColor="#a19f9d"
        android:layout_below="@+id/departments"
        android:elevation="6dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/cseandit"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        card_view:cardBackgroundColor="#a19f9d"
        android:layout_below="@+id/card_view1"
        android:elevation="6dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/mechandcivil"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
         card_view:cardBackgroundColor="#a19f9d"
            android:id="@+id/card_view3"
            android:layout_below="@+id/card_view2"
            android:elevation="6dp"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/eeeandece"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>
    </ScrollView>





</RelativeLayout>
